--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,70 @@
 
 
 /* Portfolio Item CSS */
+.col-xs-1 {
+    background-color:OrangeRed;
+    border: solid;
+}
 
+.col-xs-2 {
+    background-color:purple  ;
+    border: solid;
+}
 
+.col-xs-3 {
+    background-color:yellow ;
+    border: solid;
+    color:white;
+}
+
+.col-xs-4 {
+    background-color:lightYellow ;
+    border: solid;
+}
+
+.col-xs-5 {
+    background-color:blue;
+    border: solid;
+}
+
+.col-xs-6 {
+    background-color: LightSalmon ;
+    border: solid;
+}
+
+.col-xs-7 {
+    background-color: brown;
+    border: solid;
+}
+
+.col-xs-8 {
+    background-color:LightSeaGreen ;
+    border: solid;
+}
+
+.col-xs-9 {
+    background-color:black;
+    border: solid;
+}
+
+.col-xs-10 {
+    background-color:brown;
+    border: solid;
+}
+
+.col-xs-11 {
+    background-color:white;
+    border: solid;
+}
+
+.col-xs-12 {
+    background-color:pink;
+    border: solid;
+}
+.fullheight{
+    height:100px;
+    width:100px
+}
 
 /* Footer CSS */
 
